// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleField default enum multiplicity == one: default 1`] = `
SimpleField {
  Symbol(internal): Object {
    "args": Map {},
    "multiplicity": "one",
    "name": "a",
    "type": Object {
      "multiplicity": "one",
      "name": "ENUM1",
      "type": "enum",
    },
  },
  Symbol(metadata): Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "persistence": Object {
      "derived": false,
      "identity": false,
      "indexed": false,
      "persistent": true,
      "required": false,
    },
  },
}
`;

exports[`SimpleField default enum multiplicity == one: toObject 1`] = `
Object {
  "args": Object {},
  "description": undefined,
  "inheritedFrom": undefined,
  "metadata": Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "persistence": Object {
      "derived": false,
      "identity": false,
      "indexed": false,
      "persistent": true,
      "required": false,
    },
  },
  "multiplicity": "one",
  "name": "a",
  "title": undefined,
  "type": Object {
    "multiplicity": "one",
    "name": "ENUM1",
    "type": "enum",
  },
}
`;

exports[`SimpleField default enum: default 1`] = `
SimpleField {
  Symbol(internal): Object {
    "args": Map {},
    "multiplicity": "many",
    "name": "a",
    "type": Object {
      "multiplicity": "many",
      "name": "ENUM1",
      "type": "enum",
    },
  },
  Symbol(metadata): Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "persistence": Object {
      "derived": false,
      "identity": false,
      "indexed": false,
      "persistent": true,
      "required": false,
    },
  },
}
`;

exports[`SimpleField default enum: toObject 1`] = `
Object {
  "args": Object {},
  "description": undefined,
  "inheritedFrom": undefined,
  "metadata": Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "persistence": Object {
      "derived": false,
      "identity": false,
      "indexed": false,
      "persistent": true,
      "required": false,
    },
  },
  "multiplicity": "many",
  "name": "a",
  "title": undefined,
  "type": Object {
    "multiplicity": "many",
    "name": "ENUM1",
    "type": "enum",
  },
}
`;

exports[`SimpleField default: default 1`] = `
SimpleField {
  Symbol(internal): Object {
    "args": Map {},
    "multiplicity": "one",
    "name": "a",
    "type": "String",
  },
  Symbol(metadata): Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "persistence": Object {
      "derived": false,
      "identity": false,
      "indexed": false,
      "persistent": true,
      "required": false,
    },
  },
}
`;

exports[`SimpleField default: toObject 1`] = `
Object {
  "args": Object {},
  "description": undefined,
  "inheritedFrom": undefined,
  "metadata": Object {
    "acl": Object {
      "read": Array [],
      "update": Array [],
    },
    "persistence": Object {
      "derived": false,
      "identity": false,
      "indexed": false,
      "persistent": true,
      "required": false,
    },
  },
  "multiplicity": "one",
  "name": "a",
  "title": undefined,
  "type": "String",
}
`;
